Se agrego doc y configuración de platforms

--- a/GAME/GAME/Platforms/Windows/App.xaml
+++ b/GAME/GAME/Platforms/Windows/App.xaml
@@ -1,8 +1,8 @@
 ﻿<maui:MauiWinUIApplication
-    x:Class="GAME.WinUI.App"
+    x:Class="JuegoPRU.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:GAME.WinUI">
+    xmlns:local="using:JuegoPRU.WinUI">
 
 </maui:MauiWinUIApplication>
