--- a/GAME/GAME/App.xaml
+++ b/GAME/GAME/App.xaml
@@ -1,14 +1,26 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:GAME"
-             x:Class="GAME.App">
+             xmlns:local="clr-namespace:JuegoPRU"
+             xmlns:converters="clr-namespace:JuegoPRU.Converters"
+             x:Class="JuegoPRU.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            
+            <!-- Value Converters -->
+            <converters:HealthConverter x:Key="HealthConverter" />
+            <converters:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+            <Style x:Key="MenuButton" TargetType="Button">
+                <Setter Property="BackgroundColor" Value="#80000000" />
+                <Setter Property="TextColor" Value="White" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="CornerRadius" Value="20" />
+                <Setter Property="Padding" Value="15,10" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
