--- a/GAME/GAME/AppShell.xaml
+++ b/GAME/GAME/AppShell.xaml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="GAME.AppShell"
+    x:Class="JuegoPRU.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:GAME"
-    Title="GAME">
+    xmlns:local="clr-namespace:JuegoPRU"
+    Title="JuegoPRU">
 
     <ShellContent
         Title="Home"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Route="main" />
 
 </Shell>
