--- a/GAME/GAME/MainPage.xaml
+++ b/GAME/GAME/MainPage.xaml
@@ -1,36 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GAME.MainPage">
+             xmlns:services="clr-namespace:JuegoPRU.Services"
+             x:Class="JuegoPRU.MainPage"
+             Title="Combat Game">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a hovercraft number nine" />
-
+    <Grid>
+        <Image Source="inicio.png" Aspect="AspectFill" />
+        <VerticalStackLayout Padding="30,0" Spacing="20" VerticalOptions="Center">
             <Label
-                Text="Hello, World!"
-                Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
-            <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                Text="Fantasy Combat"
+                FontSize="48"
+                FontAttributes="Bold"
+                HorizontalOptions="Center"
+                TextColor="White"
+                />
+            <Button Text="{Binding Source={x:Static services:LocalizationManager.Instance}, Path=StartGameText}" Command="{Binding StartGameCommand}" Style="{StaticResource MenuButton}" />
+            <Button Text="{Binding Source={x:Static services:LocalizationManager.Instance}, Path=ViewStatsText}" Command="{Binding ViewStatsCommand}" Style="{StaticResource MenuButton}" />
+            <Button Text="{Binding Source={x:Static services:LocalizationManager.Instance}, Path=HowToPlayText}" Command="{Binding HowToPlayCommand}" Style="{StaticResource MenuButton}" />
+            <Button Text="{Binding Source={x:Static services:LocalizationManager.Instance}, Path=TechnicalInfoText}" Command="{Binding TechnicalInfoCommand}" Style="{StaticResource MenuButton}" />
+            <Button Text="{Binding Source={x:Static services:LocalizationManager.Instance}, Path=CreditsText}" Command="{Binding CreditsCommand}" Style="{StaticResource MenuButton}" />
+            <Button Text="{Binding Source={x:Static services:LocalizationManager.Instance}, Path=SettingsText}" Command="{Binding SettingsCommand}" Style="{StaticResource MenuButton}" />
         </VerticalStackLayout>
-    </ScrollView>
+    </Grid>
 
 </ContentPage>
