--- a/GAME/GAME/Views/CharacterSelectionPage.xaml
+++ b/GAME/GAME/Views/CharacterSelectionPage.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:JuegoPRU.ViewModels"
-             xmlns:services="clr-namespace:JuegoPRU.Services"
-             x:Class="JuegoPRU.Views.CharacterSelectionPage"
+             xmlns:viewmodels="clr-namespace:GAME.ViewModels"
+             xmlns:services="clr-namespace:GAME.Services"
+             x:Class="GAME.Views.CharacterSelectionPage"
              Title="Character Selection">
 
     <ScrollView>
