--- a/GAME/GAME/App.xaml
+++ b/GAME/GAME/App.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:JuegoPRU"
-             xmlns:converters="clr-namespace:JuegoPRU.Converters"
-             x:Class="JuegoPRU.App">
+             xmlns:local="clr-namespace:GAME"
+             xmlns:converters="clr-namespace:GAME.Converters"
+             x:Class="GAME.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
