--- a/GAME/GAME/AppShell.xaml
+++ b/GAME/GAME/AppShell.xaml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="JuegoPRU.AppShell"
+    x:Class="GAME.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:JuegoPRU"
-    Title="JuegoPRU">
+    xmlns:local="clr-namespace:GAME"
+    Title="GAME">
 
     <ShellContent
         Title="Home"
