--- a/GAME/GAME/Views/SettingsPage.xaml
+++ b/GAME/GAME/Views/SettingsPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:viewmodels="clr-namespace:JuegoPRU.ViewModels"
-             x:Class="JuegoPRU.Views.SettingsPage"
+             xmlns:viewmodels="clr-namespace:GAME.ViewModels"
+             x:Class="GAME.Views.SettingsPage"
              Title="Settings">
     <ContentPage.BindingContext>
         <viewmodels:SettingsViewModel />
