--- a/GAME/GAME/Views/StatisticsPage.xaml
+++ b/GAME/GAME/Views/StatisticsPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:services="clr-namespace:JuegoPRU.Services"
-             x:Class="JuegoPRU.Views.StatisticsPage"
+             xmlns:services="clr-namespace:GAME.Services"
+             x:Class="GAME.Views.StatisticsPage"
              Title="Statistics">
 
     <VerticalStackLayout Padding="15" Spacing="10" VerticalOptions="FillAndExpand">
